--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/pwa": "^3.0.2",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
+    "nuxt-i18n": "^6.18.0",
     "vuex-simple": "^2.2.0"
   },
   "devDependencies": {
